fix (toolbar): fix text color indicator alignment when toolbar is on the top. Closes #665

--- a/src/format-types/highlight/editor.scss
+++ b/src/format-types/highlight/editor.scss
@@ -22,8 +22,8 @@
 	background: #000;
 	height: 3px;
 	width: 20px;
-	bottom: 7px;
 	left: auto;
 	right: auto;
-	margin: 0;
+	top: 50%;
+	margin: 9px 0 0;
 }
